<resources>
    <string name="app_name">Pharmacy</string>
    <string name="location_refresh">Refresh</string>
    <string name="search">Search</string>
    <string name="zipcode">Zip Code</string>
    <string name="street">street</string>
    <string name="area">Area</string>
    <string name="zipCodeOk">OK</string>
    <string name="hiphen">-</string>
    <string name="call">Call</string>
    <string name="map">Show Map</string>
    <string-array name="area_array">
        <item>Parrys</item>
        <item>Anna Salai</item>
        <item>Park Town</item>
        <item>Mandaveli</item>
        <item>Mylapore</item>
        <item>Santhome</item>
        <item>Triplicane</item>
        <item>Greams Road</item>
        <item>Vepery</item>
        <item>Egmore</item>
        <item>kilpauk</item>
        <item>Perambur</item>
        <item>Sembiam</item>
        <item>Perambur Barracks</item>
        <item>Pulianthope</item>
        <item>Royapuram</item>
        <item>Royapettah</item>
        <item>Saidapet</item>
        <item>St Thomas Mount</item>
        <item>T Nagar</item>
        <item>Teynampet</item>
        <item>Alwarpet</item>
        <item>Tiruvottiyur</item>
        <item>Adyar</item>
        <item>korukupet</item>
        <item>washermanpet</item>
        <item>Ayanavaram</item>
        <item>kodambakkam</item>
        <item>College of Engineering</item>
        <item>Vadapalani</item>
        <item>Meenambakkam</item>
        <item>Raja Annamalai Puram</item>
        <item>Mandaveli</item>
        <item>Aminjikarai</item>
        <item>Shenoy Nagar</item>
        <item>Chetpet</item>
        <item>Guindy</item>
        <item>Ekkaduthangal</item>
        <item>West Mambalam</item>
        <item>Nungambakkam</item>
        <item>Nandanam</item>
        <item>IIT Chennai</item>
        <item>Mogappair</item>
        <item>ICF Colony</item>
        <item>Vyasaarpadi</item>
        <item>Anna Nagar</item>
        <item>Tiruvanmiyur</item>
        <item>Neelankarai</item>
        <item>Kottivakkam</item>
        <item>Velacheri</item>
        <item>Pallavaram</item>
        <item>Chrompet</item>
        <item>Tambaram H.O</item>
        <item>Tambaram Sanatorium</item>
        <item>Vandalur</item>
        <item>Villivakkam</item>
        <item>Padi</item>
        <item>Madhavaram Milk Colony</item>
        <item>Redhills</item>
        <item>Ambattur</item>
        <item>Avadi</item>
        <item>Avadi I.A.F</item>
        <item>Poonamallee</item>
        <item>Kumananchavadi</item>
        <item>Senneerkuppam</item>
        <item>Mangadu</item>
        <item>Iyyappanthangal</item>
        <item>Kattupakkam</item>
        <item>Ennore</item>
        <item>Ambattur Industrial Estate</item>
        <item>Tambaram East</item>
        <item>Madhavaram</item>
        <item>Nanganallur</item>
        <item>Thirumullaivoyal</item>
        <item>Perungalathur</item>
        <item>Chitlapakkam</item>
        <item>CRP Camp Avadi</item>
        <item>Pozhal</item>
        <item>Sholavaram</item>
        <item>Manali</item>
        <item>Kundrathur</item>
        <item>Anakaputhur</item>
        <item>Kamaraj Nagar</item>
        <item>Pattabiram</item>
        <item>Selaiyur</item>
        <item>Polichalur</item>
        <item>Pammal</item>
        <item>Tiruverkadu</item>
        <item>K K Nagar</item>
        <item>Sowcarpet</item>
        <item>korattur</item>
        <item>Tondiarpet</item>
        <item>New Washermenpet</item>
        <item>Peravallur</item>
        <item>Ashok Nagar</item>
        <item>Flowers Road</item>
        <item>Kotturpuram</item>
        <item>Gopalapuram</item>
        <item> Alwarthirunagar</item>
        <item>Valasaravakkam</item>
        <item>Adambakkam</item>
        <item>Nandambakkam</item>
        <item>Ramapuram</item>
        <item>Besant Nagar</item>
        <item>Madipakkam</item>
        <item>Virugambakkam</item>
        <item>Saligramam</item>
        <item>Choolaimedu</item>
        <item>Maduravoyal</item>
        <item>Ayanambakkam</item>
        <item>Perungudi</item>
        <item>Thoraipakkam</item>
        <item>Kandanchavadi</item>
        <item>SIDCO  estate</item>
        <item>Kolathur</item>
        <item>Perumbakkam</item>
        <item>Medavakkam</item>
        <item> Pallikaranai</item>
        <item>Anna Nagar West</item>
        <item>Anna Nagar East</item>
        <item>Manali New Town  </item>
        <item>George Town</item>
        <item>Commander In Chief Road</item>
        <item>Arumbakkam</item>
        <item>Koyambedu</item>
        <item>Nerkundram</item>
        <item>Broadway</item>
        <item>Ponniamman Medu</item>
        <item>Choolai</item>
        <item>Tharamani</item>
        <item>Pazhavanthangal</item>
        <item>Injambakkam</item>
        <item>Porur</item>
        <item>Manapakkam</item>
        <item>Keelkattalai</item>
        <item>Kovilambakkam</item>
        <item>Old Pallavaram</item>
        <item>Kodungaiyur</item>
        <item>Sholinganallur</item>
        <item>Mangadu</item>
        <item>Gummidipundi</item>
        <item>Minjur </item>
        <item>Ponneri</item>
        <item>Kavarapettai</item>
        <item>Padappai</item>
        <item>Thirunindravur</item>
        <item>Gerugambakkam</item>
        <item>Mangadu</item>
        <item>Nazarethpettai</item>
    </string-array>
</resources>