<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:id="@+id/zipalertlayout"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" >        
    
    
    <AutoCompleteTextView
        android:id="@+id/locality" 
        android:inputType="textPostalAddress"
        android:hint="@string/area"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"        
        android:gravity="center_vertical" />
    <AutoCompleteTextView
        android:id="@+id/street" 
        android:inputType="textPostalAddress"
        android:hint="@string/street"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"        
        android:gravity="center_vertical" />
    <EditText 
        android:id="@+id/zipCode" 
        android:inputType="number"
        android:hint="@string/zipcode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLength="6"        
        android:gravity="center_vertical" />
    
    <Button android:id="@+id/zipAlertOKButton"
            android:text="@string/zipCodeOk"
            android:textColor="#FFFFFF"
            android:textStyle="bold"
            android:background="@drawable/border"
            android:layout_width="match_parent"              
            android:layout_height="match_parent"                    
            android:gravity="center" />
    
    
</LinearLayout>